# dolphin-insync-plugin

./: CMakeLists.txt  README.md  dolphin-insync-plugin.cpp  dolphin-insync-plugin.desktop  dolphin-insync-plugin.h  fileitemactioninsyncplugin.cpp  fileitemactioninsyncplugin.desktop  fileitemactioninsyncplugin.h  insyncdolphinpluginhelper.cpp  insyncdolphinpluginhelper.h  overlayiconinsyncplugin.cpp  overlayiconinsyncplugin.h  overlayiconinsyncplugin.json
